Upgrade to Java 18 with preview features